--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
+<!-- index page that displays a message that takes you to the notes page -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +8,16 @@
   <title>Note Taker</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
-
+<!-- main body of the application -->
 <body>
+  <!-- navigation -->
   <nav class="navbar bg-info">
     <a class="navbar-brand text-light p-3" href="/">Note Taker
     </a>
   </nav>
+  <!-- main content -->
   <div class="container">
+    <!-- content area that contains the message and controls to take the user to the notes page.  -->
     <div style="margin-top: 80px;" class="text-center p-5 mb-4 bg-light">
       <h1 class="display-4">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
       <h4 class="mt-4">Take notes with Express</h4>
