--- a/public/notes.html
+++ b/public/notes.html
@@ -6,12 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Note Taker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
 
@@ -21,8 +15,9 @@
     <nav class="navbar bg-info">
       <a class="navbar-brand text-light p-3" href="/">Note Taker </a>
       <div class="icons">
-        <i class="fas fa-save text-light save-note"></i>
-        <i class="fas fa-plus text-light new-note"></i>
+        <button type="button" class="btn btn-outline-light save-note"><i class="fas fa-save"></i>Save Note</button>
+        <button type="button" class="btn btn-outline-danger clear-form"><i class="fa-solid fa-xmark"></i>Clear Form</button>
+        <button type="button" class="btn btn-outline-light new-note"><i class="fas fa-plus"></i>New Note</button>
       </div>
     </nav>
 
@@ -46,6 +41,7 @@
         </div>
       </div>
     </div>
+    <script src="https://kit.fontawesome.com/8b468f2f96.js" crossorigin="anonymous"></script>
     <script src="/assets/js/index.js"></script>
   </body>
 </html>
